<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.singlelab.lume.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.singlelab.lume.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.singlelab.lume.ui.chats.ChatsFragment"
        android:label="@string/chats_title"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.singlelab.lume.ui.my_profile.MyProfileFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_my_profile">
        <action
            android:id="@+id/action_navigation_my_profile_to_navigation_auth"
            app:destination="@id/navigation_auth" />
    </fragment>

    <fragment
        android:id="@+id/navigation_auth"
        android:name="com.singlelab.lume.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_navigation_auth_to_navigation_registration"
            app:destination="@id/navigation_registration" />
        <action
            android:id="@+id/action_navigation_auth_to_navigation_my_profile"
            app:destination="@id/navigation_my_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.singlelab.lume.ui.reg.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration">

        <action
            android:id="@+id/action_navigation_registration_to_navigation_my_profile"
            app:destination="@id/navigation_my_profile" />
    </fragment>
</navigation>