<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            android:id="@+id/choose_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/choose_types"
            android:textSize="@dimen/text_size_standart" />

        <include layout="@layout/view_grid_emoji" />

        <TextView
            android:id="@+id/title_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:lines="3"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/selected_all" />

        <Switch
            android:id="@+id/switch_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:checked="false"
            android:text="@string/events_is_online" />

        <Switch
            android:id="@+id/switch_not_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:checked="false"
            android:text="@string/events_not_online" />

        <TextView
            android:id="@+id/text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableEnd="@drawable/ic_arrow"
            android:paddingStart="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/margin_medium"
            android:text="@string/city"
            android:textSize="@dimen/text_size_standart"
            app:layout_goneMarginTop="@dimen/margin_medium" />

        <TextView
            android:id="@+id/text_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_size_standart"
            tools:text="На расстоянии от меня в 10 км" />

        <SeekBar
            android:id="@+id/seek_bar_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:max="2"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            android:thumbTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/any_age"
            android:textSize="@dimen/text_size_standart" />

        <io.apptik.widget.MultiSlider
            android:id="@+id/seek_bar_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:rangeColor="@color/colorAccent"
            app:thumbColor="@color/colorAccent"
            app:thumbNumber="2" />

        <Button
            android:id="@+id/button_apply"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/apply"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>